# example-file-storage

./: .dockerignore  .env  .gitignore  Dockerfile  Readme.MD  docker-compose.yml  pyproject.toml  run.py  yoyo.ini
file_storage/: app.py  conf.py  router.py  setup.py  sql.py  typings.py  views.py
file_storage/migrations/: 20201207_01_5UMJd.py
scripts/: migrate.sh  run.sh  start_server.sh  test.sh
tests/: fixtures.py  test_api.py
